@@ -7,4 +7,4 @@ start on (stopped rc RUNLEVEL=[2345] and stopped cloud-config)
 console output
 task
 
-exec cloud-init-cfg all cloud_final
+exec cloud-init-cfg all final
